--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Generator Fikcyjnego Profilu</title>
+  <title>Bambik-Project</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
